[project]
name = "remember-me-mcp-server"
version = "0.1.0"
description = "Remember Me MCP server"
authors = [{ name = "Ryan Northey", email = "ryan@synca.io" }]
dependencies = [
    "mcp[cli]",
    "pyyaml"
]
requires-python = ">=3.12"

[project.scripts]
remember-me-server = "remember_me_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["remember_me_mcp_server"]
